made the stubby body

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% block body %}
     <!-- Start of body content specific to page -->
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-white"><strong>Python Home Page</strong></h1>
+        <h1 class="text-white"><strong>Paaras Purohit - APCSP Flask Website</strong></h1>
         <div class="row">
             <div class="col-4">
                 <div class="card">
@@ -15,9 +15,9 @@
                         <ol>
                             <li>Python 3.9 is used for most of our backend PBL. HTML, CSS, JavaScript will be used in frontend</li>
                             <li>Visuals Studio Code (VS Code) is the primary editor, Interactive Development Environment (IDE).</li>
-                            <li>GitHub.  Managing and sharing code change, branches, pull requests, issues, and more will be through GitHub.</li>
-                            <li>DevOps. Python programmers should have a passion for managing the environment and learning automation (Git, Linux, Bash, Python Packages, Docker).</li>
-                            <li>API and Microservice using Flask.  Mastering development techniques in creating and consuming RESTful APIs</li>
+                            <li>GitHub. Managing and sharing code change, branches, pull requests, issues, and more will be through GitHub.</li>
+                            <li>DevOps. Python programmers should have a passion for managing the environment and learning automation (Git, Linux, Bash, Python Packages, Docker)</li>
+                            <li>API and Microservice using Flask. Mastering development techniques in creating and consuming RESTful APIs</li>
                         </ol>
                     </p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
