--- a/templates/stub.html
+++ b/templates/stub.html
@@ -8,8 +8,16 @@
 {% block body %}
     <!- Try building a new body here, bootstrap is a wise choice ->
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-primary"><strong>Stubby Body</strong></h1>
-        <p class="text-secondary">Paaras Purohit</p>
+        <h1 class="text-primary"><strong>About My Team</strong></h1>
+        <h3 class="text-primary">Paaras Purohit</h3>
+        <p class="text-secondary">I have been programming for 6 years now, have been in art/animation for 4 and a half years, and have been making music for about 2 years now.</p>
+        <h3 class="text-primary">AJ Ruiz</h3>
+        <p class="text-secondary">I have only been coding since I've started this class, I do a lot of math, play a lot of games</p>
+        <h3 class="text-primary">Tong Haoxuan</h3>
+        <p class="text-secondary">I have beem programming for 4 years and have been in several programming competitions, including USACO and ACSL</p>
+        <h3 class="text-primary">Samarth Kalanke</h3>
+        <p class="text-secondary">Samarth plays basketball and volleyball.</p>
+
     </div>
 {% endblock %}
 
