--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <!-- Start of body content specific to page -->
     <div class="px-5 py-5 mx-auto">
         <h1 class="text-white"><strong>Paaras Purohit - APCSP Flask Website</strong></h1>
-        <h3>I'm not exactly sure what to edit here.</h3>
+        <h3 class="text-white">I'm not exactly sure what to edit here.</h3>
         <div class="row">
             <div class="col-4">
                 <div class="card">
